# berzcoin

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt
ci/: README.md  build.yml  lint.yml  security.yml
cli/: __init__.py  main.py  wallet_standalone.py
configs/: berzcoin.regtest.example.conf  bootstrap.example.ini  bootstrap_nodes.json  field_validation_profiles.json  mainnet.toml  mainnet_seeds.toml  regtest.toml  secure_mainnet.toml  testnet.toml
docker/: docker-compose.yml  node.Dockerfile
docs/: FULL_NODE_VS_WALLET.md  MAINNET_READINESS_REPORT_2026-04-08.md  OPERATIONS_PLAYBOOK.md  PRODUCTION_OPS.md  PROJECT_ARCHITECTURE.md  QUICK_START.md  RUNBOOK_CONSENSUS_ACTIVATION.md  RUNBOOK_DEPLOY.md  RUNBOOK_FIELD_VALIDATION_SCALE.md  RUNBOOK_INCIDENTS.md  RUNBOOK_UPGRADE.md  V1_SHARING_AND_RUN.md  V2_DEFAULTS_CHECKLIST.md  V2_OPERATOR_UPGRADE_NOTE.md  V2_RC_CLEANUP_PLAN.md  architecture.md  consensus-rules.md  lightwallet-protocol.md  mining.md  p2p-protocol.md  release-process.md  rpc-api.md  wallet-api.md
genesis/: checkpoints.json  mainnet_checkpoints.json  mainnet_genesis.json  testnet_genesis.json
node/: __init__.py
release/: manifest.json
scripts/: assert_field_validation_window.py  assert_soak_consecutive_passes.py  bootstrap_regtest_wallet_dashboard_mining.sh  build_linux_packages.sh  check_no_placeholder_artifacts.sh  connect_peer_quick.sh  core_diff_preflight.sh  create_release.sh  create_wallet.py  dashboard_demo.sh  deploy_dns_seed.py  easy_mine.sh  init_datadir.sh  (+19 more)
(+240 files in other folders)
